fix: buttons on mobile

--- a/src/app/features/home/components/time-picker/time-picker.component.scss
+++ b/src/app/features/home/components/time-picker/time-picker.component.scss
@@ -48,11 +48,15 @@
       margin: 0 auto;
       display: flex;
       gap: 20px;
+      @media (max-width: 900px) {
+        flex-direction: column;
+        gap: 10px;
+      }
       button {
         transition: 0.3s;
-        width: 200px;
         height: 50px;
         font-weight: 900;
+        width: 200px;
         cursor: pointer;
         &#find {
           background-color: #ffb612;
